--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><base href="home.html" />
+<html><head><base href="home.html">
 <meta charset="UTF-8">
 <title>AniStream - Your Gateway to Anime</title>
 <style>
@@ -156,6 +156,7 @@ body {
         AniStream
       </div>
       <div class="nav-links">
+        <a href="/home.html">Home</a>
         <a href="/browse">Browse</a>
         <a href="/genres">Genres</a>
         <a href="/seasonal">Seasonal</a>
