--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ body {
 
   <section class="hero">
     <div class="hero-content">
+      <img src="banner.webp">
       <h1>Welcome to AniStream</h1>
       <p>Stream your favorite anime series and movies in HD quality</p>
     </div>
