--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@ body {
 
   <section class="hero">
     <div class="hero-content">
-      <img src="banner.webp">
-      <h1>Welcome to AniStream</h1>
-      <p>Stream your favorite anime series and movies in HD quality</p>
+        <div class="anime-grid">
+          <img src="banner.webp" alt="Spyx" width="auto" height="auto" class="fade-in">
+          <h1>Welcome to AniStream</h1>
+          <p><img src="banner.webp">Stream your favorite anime series and movies in HD quality</p>
+        </div>
     </div>
   </section>
 
@@ -177,28 +179,28 @@ body {
     <h2>Trending Now</h2>
     <div class="anime-grid">
       <div class="anime-card">
-        <img src="https://websim.anime/demon-slayer.jpg" alt="Demon Slayer key visual, showing Tanjiro wielding his sword" width="200" height="300">
+        <img src="demonslider.jpg" alt="Demon Slayer key visual, showing Tanjiro wielding his sword" width="200" height="300">
         <div class="anime-info">
           <h3>Demon Slayer</h3>
           <button class="watch-btn">Watch Now</button>
         </div>
       </div>
       <div class="anime-card">
-        <img src="https://websim.anime/jujutsu-kaisen.jpg" alt="Jujutsu Kaisen poster featuring Yuji Itadori and Sukuna" width="200" height="300">
+        <img src="dandan.jpg" alt="Jujutsu Kaisen poster featuring Yuji Itadori and Sukuna" width="200" height="300">
         <div class="anime-info">
           <h3>Jujutsu Kaisen</h3>
           <button class="watch-btn">Watch Now</button>
         </div>
       </div>
       <div class="anime-card">
-        <img src="https://websim.anime/spy-family.jpg" alt="Spy x Family group shot of Anya, Loid, and Yor" width="200" height="300">
+        <img src="aot.jpg" alt="Spy x Family group shot of Anya, Loid, and Yor" width="200" height="300">
         <div class="anime-info">
           <h3>Spy x Family</h3>
           <button class="watch-btn">Watch Now</button>
         </div>
       </div>
       <div class="anime-card">
-        <img src="https://websim.anime/chainsaw-man.jpg" alt="Chainsaw Man featuring Denji in his transformed state" width="200" height="300">
+        <img src="naruto.jpg" alt="Chainsaw Man featuring Denji in his transformed state" width="200" height="300">
         <div class="anime-info">
           <h3>Chainsaw Man</h3>
           <button class="watch-btn">Watch Now</button>
