--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ body {
         <div class="anime-grid">
           <img src="banner.webp" alt="Spyx" width="auto" height="auto" class="fade-in">
           <h1>Welcome to AniStream</h1>
-          <p><img src="banner.webp">Stream your favorite anime series and movies in HD quality</p>
+          <p>Stream your favorite anime series and movies in HD quality</p>
         </div>
     </div>
   </section>
