--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ body {
       </div>
       <div class="nav-links">
         <a href="/home.html">Home</a>
-        <a href="/browse">Browse</a>
-        <a href="/genres">Genres</a>
+        <a href="/streamku.html">Browse</a>
+        <a href="/home-1.html">Home2</a>
         <a href="/seasonal">Seasonal</a>
         <a href="/my-list">My List</a>
       </div>
