--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@ nav {
 <body>
     <nav>
         <div class="nav-content">
-            <a href="/streamku.html" class="logo">StreamKu</a>
+            <a href="streamku.html" class="logo">StreamKu</a>
             <div class="nav-links">
-                <a href="/home.html" class="active">Home</a>
-                <a href="/movies.html">Movies</a>
-                <a href="/series.html">TV Series</a>
+                <a href="home.html" class="active">Home</a>
+                <a href="movies.html">Movies</a>
+                <a href="series.html">TV Series</a>
             </div>
         </div>
     </nav>
